# robot-gitlab-label

./: BUILD.bazel  README.md  README_zh_CN.md  build.sh  clear_labels.go  go.mod  go.sum  issue_note_event.go  label_helper.go  main.go  mr_note_event.go  robot.go  squash.go
